[project]
name = "finalproject-ivankiriyan-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Kiriyan"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prettytable (>=3.17.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
 packages = [
     { include = "valutatrade_hub" },
 ]

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[tool.ruff]
line-length = 88
target-version = "py311"
[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)"
]